bugfix : Responsive on Safari, filters off if new search, internal link on images on result page

--- a/src/app/artist-page/artist-page.component.css
+++ b/src/app/artist-page/artist-page.component.css
@@ -3,3 +3,7 @@
     text-align: center;
     padding-bottom: 15px;
 }
+
+.container {
+    margin-top: 100px;
+}
